--- a/Prevu.Synoptics.V4228-RES/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P230.xaml
@@ -77,7 +77,7 @@
         <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="361" Canvas.Top="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="361" Canvas.Top="427" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="816" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="298-21-CV1" JumpToLabel="320-41-LT1" Canvas.Left="1071" Canvas.Top="581" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="234-01-MA1" JumpToLabel="320-41-LT1" Canvas.Left="1071" Canvas.Top="581" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="230-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="361" Canvas.Top="302" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="230-01-MA1" Canvas.Left="635" Canvas.Top="236"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="228-01-MA1" Canvas.Left="529" Canvas.Top="98"/>
