--- a/Prevu.Synoptics.V4228-RES/Pages/P330.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P330.xaml
@@ -10,7 +10,7 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe Width="165" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="194" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="164" StatusComponent="298-01-MA1" PipeHeight="Medium"  Canvas.Left="109" Canvas.Top="295" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
+        <Labels:Pipe Width="164" StatusComponent="234-01-MA1" PipeHeight="Medium"  Canvas.Left="109" Canvas.Top="295" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -43,7 +43,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="678" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="553" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="837" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="107" StatusComponent="298-01-MA1" PipeHeight="Medium"  Canvas.Left="88" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
+        <Labels:Pipe Width="107" StatusComponent="234-01-MA1" PipeHeight="Medium"  Canvas.Left="88" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="71" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="464" Canvas.Top="356" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="294" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="384" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
@@ -111,7 +111,7 @@
         <Labels:DetailsLabel ComponentName="335-VIEW" DetailsPageName="D335" Canvas.Left="1172" Canvas.Top="577" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="354-HEAT" Canvas.Left="612" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1381" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="320-41-LT1" JumpToLabel="298-01-MA1" Canvas.Left="39" Canvas.Top="187" />
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="320-41-LT1" JumpToLabel="234-01-MA1" Canvas.Left="39" Canvas.Top="187" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="322-01-MA1" Canvas.Left="416" Canvas.Top="286" />
         <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="963" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
