--- a/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
@@ -20,36 +20,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS11" Canvas.Left="392" Canvas.Top="501" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="383" Canvas.Top="501" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="142" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS12" Canvas.Left="401" Canvas.Top="501" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="75" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="527" Canvas.Top="156"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="44" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="578" Canvas.Top="176">
             <Labels:Pipe.RenderTransform>
@@ -82,8 +52,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="330" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2" Canvas.Left="140" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1"  Color="Air" Canvas.Left="354" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" PipeHeight="Medium" Canvas.Left="422" Canvas.Top="652" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1"  Color="Air" Canvas.Left="395" Canvas.Top="717" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" PipeHeight="Medium" Canvas.Left="463" Canvas.Top="652" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -104,17 +74,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="84" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="461" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="153" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="292" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="174" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="292" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="238" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="216" Canvas.Top="156" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="366" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="770" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -160,7 +120,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS10" Canvas.Left="481" Canvas.Top="504" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="57" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="815" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="61" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="894" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="66" StatusComponent="880-01-ECS13" RenderTransformOrigin="0.5,0.5" Canvas.Left="740" Canvas.Top="526" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -219,17 +178,37 @@
         </Labels:Pipe>
         <Labels:Pipe Width="49" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="1062" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="888-21-CV1" VisibilitySignal="LS1" />
         <Labels:Pipe Width="15" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="476" Canvas.Top="156" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="154" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="427" Canvas.Top="501" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="84" StatusComponent="880-01-ECS10" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="422" Canvas.Top="464" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform />
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform />
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Machines:VRC_WaterCollectingTank Height="69" Width="23" Canvas.Left="497" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="404" Canvas.Top="181" Height="260" Width="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:VRC_WaterCollectingTank Canvas.Left="447" Canvas.Top="566" Width="32" Height="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VS_Airlock Canvas.Left="434" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="425" Canvas.Top="682" Height="50" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:VRC_WaterCollectingTank Canvas.Left="488" Canvas.Top="566" Width="32" Height="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="475" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="466" Canvas.Top="682" Height="50" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_SingleBag Canvas.Left="1001" Canvas.Top="162" Height="127" Width="110" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="1244" Canvas.Top="584" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1304" Canvas.Top="460" Height="93" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="858" Canvas.Top="450" Height="50" Width="50"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="704" Canvas.Top="504" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="339" Canvas.Top="695" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="380" Canvas.Top="695" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="255" Canvas.Top="482" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
                 <TransformGroup>
@@ -291,9 +270,9 @@
             VerticalAlignment="Center" 
             ComponentName="880-01-EC1" Canvas.Left="511" Canvas.Top="392"/>
         <Labels:DeviceLabel 
-            ComponentName="888-01-MA1" Canvas.Left="319" Canvas.Top="639" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            ComponentName="888-01-MA1" Canvas.Left="360" Canvas.Top="639" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel 
-            ComponentName="886-01-MA1" Canvas.Left="510" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            ComponentName="886-01-MA1" Canvas.Left="551" Canvas.Top="581" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel 
       ComponentName="880-01-ECS10" Canvas.Left="340" Canvas.Top="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
